# Infinet

Unit_testing/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Infinet_tests  Makefile  cmake_install.cmake
Unit_testing/include/testy/: func.h
Unit_testing/src/: func.c  func_cust.c  main.c
Unit_testing/tests/: test_func_c.cpp
Work_with_text/: ReadMe.md  main.py  pyproject.toml  status_oct_1.txt  status_oct_2.txt  status_oct_3.txt  template.txt
