[tool.poetry]
name = "Infinet_tests"
version = "0.1.0"
description = ""
authors = ["liubov <l.ilinykh@samolet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textfsm = "^1.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
